# parser-rs

./: Cargo.toml  README.md  test_output.txt
benches/: char.rs  choice.rs  digits.rs  literal.rs
examples/: json.rs  signature.rs
src/: accumulate.rs  lib.rs  main.rs  parser_range.rs  semantic_token.rs  stream.rs
src/combinators/: choice.rs  mod.rs  take_while.rs
src/fn_parser/: mod.rs  separated_by.rs
