[package]
name = "parser-rs"
version = "0.0.1"
edition = "2024"
license = "Apache-2.0"
description = "A functional/imperative style parsing library."
repository = "https://github.com/RevolvingMadness/parser-rs"
readme = "README.md"
keywords = ["parser", "parsing", "functional", "imperative", "combinator"]
categories = ["parsing"]

[dependencies]
chumsky = "0.11.2"

[dev-dependencies]
criterion = "0.8.0"

[[bench]]
name = "choice"
harness = false

[[bench]]
name = "char"
harness = false

[[bench]]
name = "literal"
harness = false

[[bench]]
name = "digits"
harness = false

[[example]]
name = "json"